--- a/package.json
+++ b/package.json
@@ -2,8 +2,5 @@
   "name": "booleantoolbox-editor",
   "version": "1.0.0",
   "type": "module",
-  "description": "Netlify functions for Boolean Toolbox Editor",
-  "dependencies": {
-    "node-fetch": "^2.6.7"
-  }
+  "description": "Boolean Toolbox Editor for Homey"
 }
